--- a/ms/references.bib
+++ b/ms/references.bib
@@ -9,6 +9,16 @@
 }
 
 
+@incollection{Bernacchi-2009,
+	address = {Dordrecht},
+	title = {Modeling the {Temperature} {Dependence} of {C}3 {Photosynthesis}},
+	booktitle = {Photosynthesis in silico  : {Understanding} {Complexity} from {Molecules} to {Ecosystems}},
+	publisher = {Springer Netherlands},
+	author = {Bernacchi, Carl J. and Rosenthal, David M. and Pimentel, Carlos and Long, Stephen P. and Farquhar, Graham D.},
+	editor = {Laisk, Agu and Nedbal, Ladislav and {Govindjee}},
+	year = {2009},
+	pages = {231--246},
+}
 @article{Blackman-2012,
 	title = {Leaf hydraulic vulnerability influences species’ bioclimatic limits in a diverse group of woody angiosperms},
 	volume = {168},
@@ -300,6 +310,16 @@
 }
 
 
+@article{Johnson-1984,
+	title = {A model of instantaneous and daily canopy photosynthesis},
+	volume = {107},
+	number = {4},
+	journal = {Journal of Theoretical Biology},
+	author = {Johnson, I.R. and Thornley, J.H.M.},
+	year = {1984},
+	pages = {531--545}
+}
+
 @book{Keddy-1989,
   title = {Competition},
   publisher = {{Springer Netherlands}},
@@ -386,6 +406,17 @@
   author = {Leimar, O. and Sasaki, A. and Doebeli, M. and Dieckmann, U.},
   year = {2013},
   pages = {3 -- 13}
+}
+
+
+@article{leuning-1995,
+	title = {A critical appraisal of a combined stomatal-photosynthesis model for {C}3 plants},
+	volume = {18},
+	number = {4},
+	journal = {Plant, Cell \& Environment},
+	author = {Leuning, R.},
+	year = {1995},
+	pages = {339--355}
 }
 
 @article{Lienard-2016,
@@ -729,6 +760,20 @@
   year = {2013},
   pages = {957--969},
 }
+
+
+@article{Sharkey-2007,
+  title = {Fitting Photosynthetic Carbon Dioxide Response Curves for {{C3}} Leaves},
+  volume = {30},
+  doi = {10.1111/j.1365-3040.2007.01710.x},
+  number = {9},
+  journal = {Plant, Cell \& Environment},
+  author = {Sharkey, Thomas D. and Bernacchi, Carl J. and Farquhar, Graham D. and Singsaas, Eric L.},
+  month = sep,
+  year = {2007},
+  pages = {1035--1040}
+}
+
 
 @Article{Simova-2015,
   title = {Shifts in trait means and variances in North American tree assemblages: species richness patterns are loosely related to the functional space},
