add start of a ms on LMA and Narea

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -407,6 +407,23 @@ conductance (a new version of \citet{Collatz-1991}).
 
 \subparagraph{Summary and what to do next}
 
+Water availability affect photosynthesis in two way. During the period
+of non water stress how photosynthesis work (the paper of
+\citet{Wright-2003} deal with that. \citet{Medlyn-2011a} also deal
+with optimal conductance in soil water limited plant.  For
+\citet{Prentice-2014} as well, ?, but they also argue that vpd
+represent the long term water availability.
+
+In period of non water stress all plant have non limited supply of
+water from the soil but the vpd is different inducing different
+transpiration at the same $g_s$. In that case leaf N area control the
+water use efficiency. Then water availability control also
+the duration of the year over which soil water is limiting. For a non water
+stressed plant, soil water supply limit the photosynthesis by
+constraining the stomatal conducatance to match the supply.
+
+
+
 There is two different approaches. In the first one, a water budget model
 predict when soil water is limiting the value of $g_s$ that match
 evapotranspiration allowed by the supply. (PhD of Lohier differ in the
