--- a/ms/references.bib
+++ b/ms/references.bib
@@ -173,6 +173,20 @@
   pages = {259--264},
 }
 
+
+@article{Dong-2017,
+  title = {Leaf Nitrogen from First Principles: Field Evidence for Adaptive Variation with Climate},
+  volume = {14},
+  shorttitle = {Leaf Nitrogen from First Principles},
+  doi = {10.5194/bg-14-481-2017},
+  number = {2},
+  journal = {Biogeosciences},
+  author = {Dong, Ning and Prentice, Iain Colin and Evans, Bradley J. and Caddy-Retalic, Stefan and Lowe, Andrew J. and Wright, Ian J.},
+  month = jan,
+  year = {2017},
+  pages = {481--495}
+}
+
 @Article{Douma-2011,
   title = {Disturbance and resource availability act differently on the same suite of plant traits: revisiting assembly hypotheses},
   volume = {93},
@@ -409,7 +423,7 @@
 }
 
 
-@article{leuning-1995,
+@article{Leuning-1995,
 	title = {A critical appraisal of a combined stomatal-photosynthesis model for {C}3 plants},
 	volume = {18},
 	number = {4},
@@ -478,6 +492,18 @@
   pages = {706--717},
 }
 
+
+@article{Makela-2002,
+  title = {Challenges and Opportunities of the Optimality Approach in Plant Ecology},
+  volume = {36},
+  number = {3},
+  journal = {Silva Fennica},
+  author = {Makela, Annikki and Givnish, Thomas J. and Berninger, Frank and Buckley, Thomas N. and Farquhar, Graham D. and Hari, Pertti},
+  year = {2002},
+  pages = {605--614}
+}
+
+
 @Article{Markesteijn-2011,
   title = {Hydraulics and life history of tropical dry forest tree species: coordination of species' drought and shade tolerance},
   volume = {191},
@@ -510,6 +536,21 @@
   year = {2011},
   pages = {1051--1059},
 }
+
+
+@article{Medlyn-2011a,
+  title = {Reconciling the Optimal and Empirical Approaches to Modelling Stomatal Conductance: {{RECONCILING OPTIMAL AND EMPIRICAL STOMATAL MODELS}}},
+  volume = {17},
+  doi = {10.1111/j.1365-2486.2010.02375.x},
+  number = {6},
+  journaltitle = {Global Change Biology},
+  author = {Medlyn, Belinda E. and Duursma, Remko A. and Eamus, Derek and Ellsworth, David S. and Prentice, I. Colin and Barton, Craig V. M. and Crous, Kristine Y. and De Angelis, Paolo and Freeman, Michael and Wingate, Lisa},
+  date = {2011-06},
+  pages = {2134--2144}
+}
+
+
+
 
 @Article{Moles-2014,
   title = {Which is a better predictor of plant traits: temperature or precipitation?},
