--- a/ms/references.bib
+++ b/ms/references.bib
@@ -209,23 +209,32 @@
   pages = {148 -- 164},
 }
 
+@article{Falster-2016,
+  title = {Plant: {{A}} Package for Modelling Forest Trait Ecology and Evolution},
+  volume = {7},
+  doi = {10.1111/2041-210X.12525},
+  number = {2},
+  journal = {Methods in Ecology and Evolution},
+  author = {Falster, Daniel S. and FitzJohn, Richard G. and Br{\"a}nnstr{\"o}m, {\AA}ke and Dieckmann, Ulf and Westoby, Mark},
+  month = feb,
+  year = {2016},
+  keywords = {Demography,emergent,fitness,growth,metapopulation,Mortality,physiology,Reproduction,size structure,trade-off},
+  pages = {136--146}
+}
+
 
 @article{Falster-2017,
   title = {Multitrait Successional Forest Dynamics Enable Diverse Competitive Coexistence},
+  volume = {114},
   journal = {Proceedings of the National Academy of Sciences},
   author = {Falster, Daniel S. and Br{\"a}nnstr{\"o}m, $\backslash$AAke and Westoby, Mark and Dieckmann, Ulf},
   year = {2017},
-  pages = {201610206}
+  pages = {E2719--E2728}
 }
 
-@Article{Falster-2016,
-  author = {D S Falster and R G FitJohn and M Westoby},
-  title = {plant: A package for modelling forest trait
-                  ecology \& evolution},
-  journal = {Methods in Ecology and Evolution},
-  year = {2016},
-  pages = {\textit{submitted}},
-}
+
+
+
 
 @Article{Farrior-2013,
   title = {Competition for Water and Light in Closed-Canopy Forests: A Tractable Model of Carbon Allocation with Implications for Carbon Sinks},
