update doc for Leaf N

--- a/ms/references.bib
+++ b/ms/references.bib
@@ -918,6 +918,17 @@
   pages = {201304551},
 }
 
+
+@article{Wright-2002b,
+  title = {Convergence towards Higher Leaf Mass per Area in Dry and Nutrient-Poor Habitats Has Different Consequences for Leaf Life Span},
+  volume = {90},
+  number = {3},
+  journal = {Journal of ecology},
+  author = {Wright, Ian J. and Westoby, Mark and Reich, Peter B.},
+  year = {2002},
+  pages = {534--543}
+}
+
 @Article{Wright-2002,
   title = {Leaves at low versus high rainfall: coordination of structure, lifespan and physiology},
   volume = {155},
