--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -68,32 +68,25 @@ Plot of pattern for leaf traits extracted from \citep{Wright-2004}.
 
 \section{Potential mechanisms for these patterns}
 
-Documenting empirical patterns of variation of plant traits along climatic gradient represents a key first step to understand changes in vegetation composition, but we also need to propose mechanisms to explain these traits patterns. There is along history of studies proposing adaptative arguments to explain the observed variation of mean trait value along climatic gradients. This range for general discussion up to quantitative optimisation approach building on ecophysiological representation of plant functioning \citep{Makela-2002}. For instance, \citet{Wright-2003} proposed that to maximize photosynthesis $N_{area}$ should increase with aridity. These approaches make a key first step (we will discuss the main arguments and models proposed for $LMA$ and $N_{area}$ below). But they provide no explanation to the large trait variation within site resulting from the coexistence of interacting species with different trait values. They fail to account for the fact that these traits are also involved in species coexistence. A much more abstract approach have used theoretical models to explore how species local climate adaptation and competitive interactions drive species evolution and changes in traits composition along theoretical gradients \citep{Case-2000,Doebeli-2003,Goldberg-2006,Leimar-2008}. These studies generally showed that competition can limit species range and results in non continuous variation of traits value along the gradient. The problem is that these studies are lacking the connection with the physiological mechanisms relating the traits to climate and competitive interactions. They are thus of limited use to explain observed patterns in the field. Generally, one single traits determines both the local adaption to the abiotic conditions -- through the distance to an optimal trait value varying along the gradients -- and the competitive interaction -- through a normal competition kernel based on trait value of the species and its competitors\citep[see][]{Case-2000}.  
+Documenting empirical patterns of variation of plant traits along climatic gradient represents a key first step to understand changes in vegetation composition, but we also need to propose mechanisms to explain these traits patterns. There is along history of studies proposing adaptative arguments to explain the observed variation of mean trait value along climatic gradients. This largely based on quantitative optimisation approach building on ecophysiological representation of plant functioning \citep{Makela-2002}. For instance, \citet{Wright-2003} proposed that to maximize photosynthesis $N_{area}$ should increase with aridity. These approaches make a key first step (we will discuss the main arguments and models proposed for $LMA$ and $N_{area}$ below). But they provide no explanation to the large trait variation within site resulting from the coexistence of interacting species with different trait values. They fail to account for the fact that these traits are also involved in species coexistence. A much more abstract approach have used theoretical models to explore how species local climate adaptation and competitive interactions drive species evolution and changes in traits composition along theoretical gradients \citep{Case-2000,Doebeli-2003,Goldberg-2006,Leimar-2008}. These studies have shown that competition can affect the range of traits value found in a given community and make the traits deviate from the theoretical climatic optimum. The problem is that these studies are lacking the physiological mechanisms underpinning climate response and competitive interactions. They are thus of limited use to explain observed patterns in traits variation in the field. Generally, one single traits determines both the local adaption to the abiotic conditions -- through the distance to an optimal trait value varying along the gradients -- and the competitive interaction -- through a normal competition kernel based on trait value of the species and its competitors\citep[see][]{Case-2000}.  
 
-Recently a few studies have nevertheless started to connect physiological approach and the theoretical approach to build models of whole communities either at local \citep{Farrior-2013} or global scale \citep[see][]{Sakschewski-2015,Scheiter-2013} representing key elements of plant ecophysiological functioning. But they have been largely unsuccessful at explaining the wide range of traits fund in a single community as these models generally failed to model the process promoting species coexistence.
-
+Recently a few studies have nevertheless started to connect physiological approach and the theoretical approach to build trait-based models of full communities dynamics either at local \citep{Farrior-2013} or global scale \citep[see][]{Sakschewski-2015,Scheiter-2013} representing key elements of plant ecophysiological functioning. But they have been largely unsuccessful at explaining the wide range of traits fund in a single community as these models generally failed to model the process promoting species coexistence.
 
 It is thus key to key to develop mechanistic models where traits are related to both the direct climate effect and to the species coexistence. To do this for $LMA$ and $N_{area}$ we use a new model -- \plant\ \citep{Falster-2016,Falster-2017} -- that connects directly with leaf traits and simultaneously allows for coexistence within sites and variation across sites. Coexistence is driven by competition for light in size-structured meta-populations and the outcomes of competition is moderated by environmental factors such as site productivity and disturbance regime.
 
 \section{Key questions for `Plant`}
 
-In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by LMA through competition for light. We will explore how the predicted mixture of traits changes along climatic gradient exploring different assumption about how environmental gradients
-affect the dynamics and competition for light. There is several
-potential mechanisms through which the aridity gradient could
-affect the community assembly. First the aridity gradient can simply affect
+In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. In \plant\ the coordination between $LMA$ and $LSS$ discriminate different strategies of resource use, with species with low $LMA$ having a greater potential maximum growth and are thus favored in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favored in low light condition.  We will explore how the predicted mixture of traits changes along aridity gradient exploring three different assumptions about how aridity
+affect the dynamics and competition for light. First the aridity gradient can simply affect
 the productivity with consequence on the process of light
-competition. Secondly, the environmental gradient can affect the
+competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}. This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}. Secondly, the environmental gradient can affect the
 trade-off underpinning the strategy of light use (so changing the
-trade-off between LMA and LLS). TODO NEED TO DEVELOP THAT EXPLAIN WRIGHT IDEAS AND THE LINK TO LEAF N. Then $N_{area}$ have can directly influence the species tolerance to aridity as proposed by \citet{Wright-2003} with an empirical photosynthesis model and more recently by \citet{Prentice-2014,Dong-2017} using a physiological photosynthesis model. Briefly, $N_{area}$ is strongly related to the abundance of photosynthetic apparatus in the leaf and allow the plant to achieve higher photosynthesis for a given stomatal conductance. This allow the leaf to function with less water.
+trade-off between LMA and LLS). For instance, it has been reported that the coordination between $LLS$ and $LMA$ is changing along aridity gradient both in regional \citep{Wright-2002b} and global studies \citep{Wright-2004}. The elevation of the relation between $LMA$ and $LLS$ was decreasing with aridity resulting in a lower leaf life span for a give $LMA$. Some studies have also reported potential effect on the slope of the relationship. This could be due to a higher investment in leaf nitrogen per area $N_{area}$ at higher aridity \citep{Wright-2002}. Thirdly, we could directly explore the role of $N_{area}$, which can have direct influence on the species tolerance to aridity as proposed by \citet{Wright-2003} with an empirical photosynthesis model and more recently by \citet{Prentice-2014,Dong-2017} using a physiological photosynthesis model. Briefly, $N_{area}$ is strongly related to the abundance of photosynthetic apparatus in the leaf and allow the plant to achieve higher photosynthesis for a given stomatal conductance. A higher $N_{area}$ thus allow the leaf to achive a higher photosynthesis at a given stomatal conductance.
 
 
 \subsection{$LMA$ and $N_{area}$ response to aridity}
 
-TODO Describe explaination proposed by Wright 
-TODO DISCUSS WRIGHT 2004 as it propose that variation of the slope of LMA LL is due to variation of Leaf N.
-Prentice
-
-Optimisation litterature of $N_{area}$ and $LMA$ (any optimisation proposed for LMA?).
+TODO look up optimisation litterature of $N_{area}$ and mainly $LMA$ (any optimisation proposed for LMA?). High $LMA$ has been proposed to be correlated to traits increasing the resistance to wilting \citep{Wright-2002b}.
 
 
 
@@ -101,10 +94,9 @@ Optimisation litterature of $N_{area}$ and $LMA$ (any optimisation proposed for 
 
 \subsection{Diversification in successional strategy and environmental effect}
 
-Coexistence across a successional gradient requires demographic trade-off between growth in high-light and shade-tolerance. Possible via trade-offs in either LMA or wood density (height at maturation - will decrease difference in LMA). Then the question is how environmental gradients affect this fundamental process of coexistence in forest and we will explore different assumption about how environmental gradients
-affect the dynamics.
+Coexistence across a successional gradient requires demographic trade-off between growth in high-light and shade-tolerance. Thius occure via trade-off in $LMA$. Then the question is how environmental gradients affect this fundamental process of coexistence in forest and we will explore different assumption about how environmental gradients affect the dynamics.
 
-In a first set of assumption we could consider models where there is only one traits LMA.
+In a first set of assumption we could consider models where there is only one trait LMA.
 
 \clearpage
 
@@ -122,14 +114,12 @@ The figure \ref{fig:lma} represents how the evolved community mixture of LMA cha
 
 \clearpage
 
-2. In second version, the environmental gradient affect the productivity ($A_{max}$) but also change the trade-off underpinning LMA-LLS in term of its elevation or its slope. TO KEEP ??
+2. In second version, the environmental gradient affect the productivity ($A_{max}$) but also change the trade-off underpinning LMA-LLS in term of its elevation or its slope.
 
 \citet{Wright-2005} reported that the trade-off between LMA and Leaf Turnover Rate, LTR ($1/LLS$), is changing with aridity with higher aridity sites having higher LTR at a given LMA and a shallower slope. There is also a shift in the link $A_{mass}$ and LMA (with higher in dry sites), probably because leaf N, but in a first step we will ignore that as the current version consider $A_{area}$ constant and the photosynthesis integrated over the year (as implemented in \plant\ ) is probably lower in dry sites. So we will keep the link between $a_{p1}$ and stress gradient as above. Note that \citet{Sakschewski-2015} implement a link between LMA and $v_{cmax_{area}}$.
 
-In Glopnet there is two main strong patterns related to aridity (i) the elevation of the LTR \textit{vs.} LMA is changing with mean annual precipitation (MAP) (see Figure \ref{fig:MAP}) and (ii) the slope of the LTR \textit{vs.} LMA is changing with the ratio MAT/MAP (see Figure \ref{fig:MAT_MAP}). To implement these two distinct options in `plant` we first regressed the elevation or the slope of the site level LTR \textit{vs.} LMA relationship against MAP or MAT/MAP and then included this in `plant` (see Figure \ref{fig:elev_slope}). One key issue here is how to scale the theoretical productivity gradient we used in the previous model ($A{max}_{area}$ is a linear function with slope one of this gradient) with MAP or MAT/MAP. So far I have just assumed that the range of MAP or MAT/MAP analysed was restricted to the part of the theoretical gradient where growth was positive (above -0.3) and thus rescaled the range of MAP or MAT/MAP to a variation of $p$ from -0.3 to 0.3. This is clearly not perfect.
-%% Need to explore possibility to predict directly $A{max}_area}$ from MAP.
+In Glopnet there is two main strong patterns related to aridity (i) the elevation of the LTR \textit{vs.} LMA is changing with mean annual precipitation (MAP) (see Figure \ref{fig:MAP}) and (ii) the slope of the LTR \textit{vs.} LMA is changing with the ratio MAT/MAP (see Figure \ref{fig:MAT_MAP}). To implement these two distinct options in `plant` we first regressed the elevation and the slope of the site level LTR \textit{vs.} LMA relationship against MAP or MAT/MAP and then included this in `plant` (see Figure \ref{fig:elev_slope}). One key issue here is how to scale the theoretical productivity gradient we used in the previous model ($A{max}_{area}$ is a linear function with slope one of this gradient) with MAP or MAT/MAP. So far I have just assumed that the range of MAP or MAT/MAP analysed was restricted to the part of the theoretical gradient where growth was positive (above -0.3) and thus rescaled the range of MAP or MAT/MAP to a variation of $p$ from -0.3 to 0.3. This is clearly not perfect.
 
-WHAT WE COULD DO IS TO USE VPD ? LINK WITH VARIABLE CHECK in PRENTICE ECOL LET.
 
 \begin{figure}[ht]
 \centering
@@ -154,25 +144,25 @@ WHAT WE COULD DO IS TO USE VPD ? LINK WITH VARIABLE CHECK in PRENTICE ECOL LET.
 \end{figure}
 
 
-In contrast, the change in the trade-off between $A_{mass}$ and LMA results in lower $A_{mass}$ at given LMA in sites with higher precipitation. This variation may be related to a change in Leaf N, with species from lower precipitation sites having higher leaf $N_{mass}$ resulting in lower tissue toughness but higher $A_{mass}$ \citep{Wright-2002}. In term in $A_{area}$ this would translate in higher $A_{area}$ at low precipitation sites...  This is a change in optimum $A_{area}$ the $A_{area}$ integrated over the year (as implemented in \plant\ ) is probably higher in site with high precipitation.
+%% This variation may be related to a change in Leaf N, with species from lower precipitation sites having higher leaf $N_{mass}$ resulting in lower tissue toughness but higher $A_{mass}$ \citep{Wright-2002}. In term in $A_{area}$ this would translate in higher $A_{area}$ at low precipitation sites.  This is a change in optimum $A_{area}$ the $A_{area}$ integrated over the year (as implemented in \plant\ ) is probably higher in site with high precipitation.
 
 \clearpage
 
-The figure \ref{fig:lma_map} represents how the evolved community mixture of LMA change along a productivity gradient when the elevation of LMA vs LTR was changing with precipitation MAP.
+The figure \ref{fig:lma_map} represents how the evolved community mixture of LMA change along a productivity gradient when the elevation and slope (but mainly elevation) of LMA vs LTR were changing with precipitation MAP.
 
 \begin{figure}[ht]
 \centering
 \includegraphics{../figures/gradient_lma_multi_elev.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area along a productivity gradient by 'Plant' with a variation of LTR \textit{vs.} LMA elevation.}
+\caption{\textbf{Predicted community assembly of leaf mass per area along a productivity gradient by 'Plant' with a variation of LTR \textit{vs.} LMA elevationwith precipitation (mainly elevation).}
 \label{fig:lma_map}}
 \end{figure}
 
-The figure \ref{fig:lma_mat_o_map} represents how the evolved community mixture of LMA change along a productivity gradient when the slope of LMA vs LTR was changing with MAT/MAP.
+The figure \ref{fig:lma_mat_o_map} represents how the evolved community mixture of LMA change along a productivity gradient when the elevation and slope of LMA vs LTR were changing with MAT/MAP.
 
 \begin{figure}[ht]
 \centering
 \includegraphics{../figures/gradient_lma_multi_slope.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area along a productivity gradient by 'Plant' with a variation of LTR \textit{vs.} LMA slope.}
+\caption{\textbf{Predicted community assembly of leaf mass per area along a productivity gradient by 'Plant' with a variation of LTR \textit{vs.} LMA with MAt/MAP.}
 \label{fig:lma_mat_o_map}}
 \end{figure}
 
@@ -180,18 +170,45 @@ The figure \ref{fig:lma_mat_o_map} represents how the evolved community mixture 
 \clearpage
 
 A second set of models could explore how LMA interact with Leaf N a second trait controlling the response to the environmental gradient. Aridity gradients affect productivity (photosynthesis) but a
-high leaf N allow for an adaptation in term of photosynthesis to low water availability but with a cost (higher leaf N comes at both a respiration cost and higher leaf turnover cost). This may results in LMA shifting less than would have been otherwise, but  instead differentiate species in N (with flow on effect to shade tolerance).
+high leaf N allow for an adaptation in term of photosynthesis to low water availability but with a cost (higher leaf N comes at both a respiration cost and aslo higher leaf turnover cost bust this is not represented in plant). This may results in LMA shifting less than would have been otherwise, but instead differentiate species in N (with flow on effect to shade tolerance).
 
 
  \citet{Wright-2003} explore how N can substitute for water. $A_{area} \propto N_{area} \, g_s$ (with $g_s$ stomatal conductance). One solution would be to assume that the water stress is represented by $1/g_s$ and $N_{area}$ could off-set the effect of water stress on $A_{area}$ (in our case $A_{max}$). The cost of leaf N is in its respiration cost with higher dark leaf respiration per area for higher $N_{area}$. \citet{Prentice-2014} expanded this prediction in term of an optimization with a details Farquhar model for C3 plant, but focusing directly on $V_{cmax}$ rather than $N_{area}$.
 
  The current implementation of Leaf nitrogen per area in `plant` already captures some of the effect proposed by \citet{Wright-2003}. This is build on an empirical relationship between $A_{max}$ and $N_{area}$ 
-($A_{max} = b_{lf1} \times \over{N_{area}}{N^0_{area}}^{b_{lf5}}$ \citep{Falster-2015}). There is however no quantitative prediction of how water stress influence $A_{max}$ for different level of $N_{area}$. A first option would be to simply consider that $A_{max}$ is linearly influenced by a water stress index  as follow $A_{max} = WS * b_{lf1} \over{N_{area}}{N^0_{area}}^{b_{lf5}}$ ($WS$ is an aridity index ranging between 0.3 high aridty to 1.7 low aridty). This model is presented in the figure \ref{fig:leafN_water}. This could allow a first exploration of this assumption. 
+($A_{max} = b_{lf1} \times \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ \citep{Falster-2016}). There is however no quantitative prediction of how water stress influence $A_{max}$ for different level of $N_{area}$. A first option would be to simply consider that $A_{max}$ is linearly influenced by a water stress index  as follow $A_{max} = WS * b_{lf1} \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ ($WS$ is an aridity index ranging between 0.3 high aridty to 1.7 low aridty). This model is presented in the figure \ref{fig:leafN_water}. This could allow a first exploration of this assumption. 
 
-It would howver also be interesting to explore if using a more mechanistic model for photosynthesis and water stress could lead quantitatve prediction. I have strated to explore this below.
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/WaterS_LeafN_contour.pdf}
+\caption{\textbf{Variation of $A{max}_{area}$ with leaf nitrogen per area and water availability (productivity theoretical gradient $p$) predicted by `plant`.}
+\label{fig:leafN_water}}
+\end{figure}
+
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_narea_lma_multi_narea_lma2.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient by 'Plant'.}
+\label{fig:lma_mat_o_map}}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_narea_lma_multi_narea_lma.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient by 'Plant'. The size of the point represent the variation of LMA.}
+\label{fig:lma_mat_o_map}}
+\end{figure}
+
+\clearpage
 
 
 \paragraph{Photosynthesis model, water stress, and Leaf N}
+
+It would be interesting to explore if using a more mechanistic model for photosynthesis and water stress could lead quantitatve prediction about how water stress influence growth and $N_{area}$ influence the response to water stress. I have strated to explore this below.
+
+ONE SOLUTION WOULD BE TO USE A GRADIENT OF STOMATAL CONDUCTIVITY!!!!!
 
 \subparagraph{\citet{Collatz-1991}, photosynthesis and water stress model.}
 
@@ -425,32 +442,6 @@ Check correspondance to Plant photsynthesis model which is based on Johnson, I. 
  and is a non-rectangular hyperbola response to light where we could assume that $A_{max}$ is related to $V_{cmax}$ and thus leaf N.
 
 
-
-
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/WaterS_LeafN_contour.pdf}
-\caption{\textbf{Variation of $A{max}_{area}$ with leaf nitrogen per area and water availability (productivity theoretical gradient $p$) predicted by `plant`.}
-\label{fig:leafN_water}}
-\end{figure}
-
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/gradient_narea_lma_multi_narea_lma2.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient by 'Plant'.}
-\label{fig:lma_mat_o_map}}
-\end{figure}
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/gradient_narea_lma_multi_narea_lma.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient by 'Plant'. The size of the point represent the variation of LMA.}
-\label{fig:lma_mat_o_map}}
-\end{figure}
-
-\clearpage
 
 
 \bibliographystyle{amnat}
